[package]
name = "sherbet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = [
	"task-arena-size-32768",
	"arch-cortex-m",
	"executor-thread",
	"executor-interrupt",
	"defmt",
	"integrated-timers",
] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.1.0", features = [
	"defmt",
	"unstable-pac",
	"time-driver",
	"critical-section-impl",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.1", features = [
	"defmt",
	"defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.2.0", features = ["defmt"] }
embassy-usb-driver = "0.1.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
keyberon = { path = "../keyberon" }
packed_struct = { version = "0.10.1", default-features = false }
#keyberon = { git = "https://github.com/TeXitoi/keyberon", revision = "18f663b1a13af6c6e55455b8185f7d05c08a67ea" }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rp2040-hal = { version = "0.10.2", features = ["defmt"] }
usbd-hid = { version = "0.7.0", features = ["defmt"] }
usbd-human-interface-device = { version = "0.5.0", features = ["defmt"] }

[profile.release]
debug = true
